tests/baselines/reference/negateOperatorWithEnumType.errors.txt
negateOperatorWithEnumType.ts(17,1): error TS2695: Left side of comma operator is unused and has no side effects.


==== negateOperatorWithEnumType.ts (1 errors) ====
    // - operator on enum type
    
    enum ENUM { };
    enum ENUM1 { A, B, "" };
    
    // enum type var
    var ResultIsNumber1 = -ENUM;
    
    // expressions
    var ResultIsNumber2 = -ENUM1["B"];
    var ResultIsNumber3 = -(ENUM1.B + ENUM1[""]);
    
    // miss assignment operators
    -ENUM;
    -ENUM1;
    -ENUM1["B"];
    -ENUM, ENUM1;
    ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.